--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import "../styles/global.css"
+import Hero from "../components/Hero.astro"
+import Footer from "../components/Footer.astro"
 ---
 
 <html lang="en">
@@ -8,10 +10,13 @@ import "../styles/global.css"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content="">
 		<title>Astro</title>
 	</head>
-	<body>
+	<body class="font-primary text-sm">
+		<Hero/>
 		<h1>Astro</h1>
         <slot/>
+		<Footer/>
 	</body>
 </html>
