--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @import "tailwindcss";
+
+@theme {
+  --color-primary-blue: #2977d5;
+  --color-primary-white: #fff9fd;
+  --color-primary-black: #252525;
+  --color-dark-blue: #00296d;
+  --color-blue: #44c6e9;
+  --color-light-blue: #d4e4f4;
+
+  --font-primary: "Poppins", sans-serif;
+}
