--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css"
 import Hero from "../components/Hero.astro"
 import Footer from "../components/Footer.astro"
 import IslandInfo from "../components/IslandInfo.astro"
+import Services from "../components/Services.astro"
 ---
 
 <html lang="en">
@@ -17,6 +18,7 @@ import IslandInfo from "../components/IslandInfo.astro"
 	<body class="font-primary text-sm box-border">
 		<Hero/>
 		<IslandInfo/>
+		<Services/>
         <slot/>
 		<Footer/>
 	</body>
