--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,7 @@
   --color-dark-blue: #00296d;
   --color-blue: #44c6e9;
   --color-light-blue: #d4e4f4;
+  --color-gray: #666;
 
   --font-primary: "Poppins", sans-serif;
 }
