--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -5,7 +5,7 @@ import seeMore from "../assets/icons/seeMore.svg?url";
 import HeaderSection from "./HeaderSection.astro";
 ---
 
-<section class="py-15 px-5">
+<section class="py-15 px-5 flex flex-col gap-7.5">
   <HeaderSection sectionTitle="Nuestros Servicios" sectionSubtitle="Especialidades" />
   <div class="flex flex-col gap-10">
     {
