--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Hero from "../components/Hero.astro"
 import Footer from "../components/Footer.astro"
 import IslandInfo from "../components/IslandInfo.astro"
 import Services from "../components/Services.astro"
+import Testimonial from "../components/Testimonial.astro"
 ---
 
 <html lang="en">
@@ -19,6 +20,7 @@ import Services from "../components/Services.astro"
 		<Hero/>
 		<IslandInfo/>
 		<Services/>
+		<Testimonial />
         <slot/>
 		<Footer/>
 	</body>
