--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,7 @@
   --color-blue: #44c6e9;
   --color-light-blue: #d4e4f4;
   --color-gray: #666;
+  --color-circle-testimonial: #d9d9d9;
 
   --font-primary: "Poppins", sans-serif;
 }
