Se agregaron los elementos y estilos para crear el componente AboutUs
Esto mostrara informacion acerca del odontologo para que los usuarios vean esa informacion de forma ordenada.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,14 @@
 ---
+import AboutUs from "../components/AboutUs.astro";
+import IslandInfo from "../components/IslandInfo.astro";
+import Services from "../components/Services.astro";
+import Testimonial from "../components/Testimonial.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<h1 class="bg-amber-200">
-    index
-  </h1>
+  <IslandInfo/>
+  <Services/>
+  <Testimonial />
+  <AboutUs />
 </Layout>
