Se agrego el atributo lazy para la imagen del componente AboutUs para cargar las imagenes cuando el usuario se desplace hasta esa imagen

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -6,7 +6,7 @@ import { aboutUs } from "../data/aboutUs";
 ---
 
 <section class="px-5 py-15 flex flex-col gap-5">
-  <img class="w-full" src={imgAvatar} alt="Dra. Patricia Nieves Kiriaco">
+  <img class="w-full" src={imgAvatar} alt="Dra. Patricia Nieves Kiriaco" loading="lazy">
   <HeaderSection sectionTitle="Dra. Patricia Nieves Kiriaco" sectionSubtitle="Sobre Mi"/>
   <ul class="list-disc list-outside space-y-2 font-normal pl-6">
     {
