Se agregaron mas colores en nuestrar variables

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,8 @@
   --color-light-blue: #d4e4f4;
   --color-gray: #666;
   --color-circle-testimonial: #d9d9d9;
+  --color-initial-gradient: #252525;
+  --color-final-gradient: #44c6e9;
 
   --font-primary: "Poppins", sans-serif;
 }
